--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "99damage",
-  "version": "1.0.0",
+u  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
