--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "99damage",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.1",
+  "description": "A NodeJS API for liga.99damage.de",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
