--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
-    "compilerOptions": {
-      "target": "es5",                          
-      "module": "commonjs",                
-      "allowJs": true,
-      "outDir": "build",                          
-      "rootDir": "src",
-      "strict": true,         
-      "noImplicitAny": true,
-      "esModuleInterop": true,
-      "resolveJsonModule": true
-    }
+  "compilerOptions": {
+    "target": "es5",                          
+    "module": "commonjs", 
+    "outDir": "lib",                          
+    "rootDir": "src",
+    "strict": true,
+    "declaration": true,
+    "esModuleInterop": true
   }
+}
