--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "99damage",
-  "version": "1.1.9",
+  "version": "1.1.11",
   "description": "A NodeJS API for liga.99damage.de",
   "main": "index.js",
   "scripts": {
@@ -33,7 +33,6 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "node-json-db": "^1.1.0",
-    "querystring": "^0.2.0",
-    "steamid": "^1.1.3"
+    "querystring": "^0.2.0"
   }
 }
